Updated design, added implementation